# k3d-calico

./: .gitignore  ISSUES.txt  README.md  add-node.sh  cache-local-registry.sh  cluster-config.yaml  create-cluster.sh  delete-cluster.sh  docker-registry-clean.sh  docker-registry-start.sh  docker-registry-stop.sh  docker-registry.yaml  gen-tls-certs.sh  local-registry-create.sh  local-registry-delete.sh  local-registry.yaml  pull-tag-push-local-registry.sh  update-tigera-yamls.sh  value-overrides.yaml
calico-gloo-istio/calico/: 01-deploy-http-bin.yaml  01-deploy-netshoot.yaml  02-httpbin-calico-policy.yaml  02-httpbin-kubernetes-policy.yaml
calico-gloo-istio/gloo/: 03-deploy-http-bin.yaml  04-test-rate-limit.sh  99-dump-gloo-config.sh
calico-gloo-istio/istio/: 01-isto-helm.yaml  10-create-ingress-gateway.yaml  20-deploy-http-bin.yaml
calico-manifest/: calico.yaml
calico-operator/: 02-custom-resources.yaml
charts/: 01-reconfigure-traefik.yaml.skip  99-netshoot.yaml  calico-v3.27.0.yaml.skip  calico.yaml.skip  tigera-operator-helm.yaml  traefik-config.yaml
gloo-istio/: 01-isto-helm.yaml  02-gloo-helm.yaml  02-rate-limit.yaml  10-deploy-http-bin.yaml  20-deploy-http-bin.yaml  20-rate-limit.yaml  99-grafana-stack.yaml  99-local-stack-helm.yaml  99-local-values.yaml
gloo-istio/istio/: 01-isto-helm.yaml  (+7 more)
manifests/: 01-install-tigera.yaml  calico.yaml
monitoring/: prometheus-helm.yaml
python/: main.py  pyproject.toml
python/lib/: kubectl.py  log.py
python/scenarios/: deployment.feature
python/tests/: test_deployment.py
tests/: 01-test.sh  __helpers.sh
(+1 files in other folders)
