[tool.poetry]
name = "tests"
version = "0.1.0"
description = ""
authors = ["grs"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^8.3.1"
kubernetes = "^30.1.0"
pytest-bdd = "^7.2.0"
pyyaml = "^6.0.1"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


